feat: componente tabela radzem

--- a/BlazorAuthentication/BlazorAuthentication.Client/wwwroot/appsettings.Development.json
+++ b/BlazorAuthentication/BlazorAuthentication.Client/wwwroot/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "ApiMobilizeOauth": "https://localhost:7279/",
+  // "ApiMobilizeOauth": "https://mobilize-iot-oauth.azurewebsites.net/",
+  "ApiMobilizeIOTInventario": "https://localhost:7160/"
 }
