--- a/BlazorAuthentication/BlazorAuthentication.Client/BlazorAuthentication.Client.csproj
+++ b/BlazorAuthentication/BlazorAuthentication.Client/BlazorAuthentication.Client.csproj
@@ -14,6 +14,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="8.0.6" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.6" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
+    <PackageReference Include="Radzen.Blazor" Version="4.32.7" />
+    <PackageReference Include="RestSharp" Version="111.2.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.6.0" />
   </ItemGroup>
 
