--- a/BlazorAuthentication/BlazorAuthentication/BlazorAuthentication.csproj
+++ b/BlazorAuthentication/BlazorAuthentication/BlazorAuthentication.csproj
@@ -7,6 +7,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\disposeResources.js" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="wwwroot\disposeResources.js" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\disposeResources.js" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\BlazorAuthentication.Client\BlazorAuthentication.Client.csproj" />
     <PackageReference Include="BitzArt.Blazor.Cookies.Server" Version="1.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.6" />
