--- a/BlazorAuthentication/BlazorAuthentication.Client/BlazorAuthentication.Client.csproj
+++ b/BlazorAuthentication/BlazorAuthentication.Client/BlazorAuthentication.Client.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="BitzArt.Blazor.Cookies.Client" Version="1.0.4" />
+    <PackageReference Include="Blazor-ApexCharts" Version="3.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="8.0.6" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="8.0.6" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.6" />
